welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: type mismatch;
 found   : String("0")
 required: Int
  case "0"  => return "10:00"
       ^alarmClock:5: error: type mismatch;
 found   : String("6")
 required: Int
  case "6"  => return "10:00"
       ^alarmClock:10: error: type mismatch;
 found   : String("0")
 required: Int
  case "0"  => return "off"
       ^alarmClock:11: error: type mismatch;
 found   : String("6")
 required: Int
  case "6"  => return "off"
       ^